# kalman-filter-demos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
core/: CMakeLists.txt
core/executables/kf/: main.cpp  main_menu.cpp  main_menu.hpp
core/src/: defines.hpp.in
core/src/app/: app.cpp  app.hpp
core/src/demos/1/: demo_1.cpp  demo_1.hpp
core/src/demos/2/: demo_2.cpp  demo_2.hpp
core/src/demos/3/: demo_3.cpp  demo_3.hpp
core/src/demos/4/: demo_4.cpp  demo_4.hpp
core/src/demos/s1/: demo_sigma_points.cpp  demo_sigma_points.hpp
core/src/models/: ball.hpp  cart_1d.hpp  cart_2d.hpp
core/src/simulator/: simulation_manager.cpp  simulation_manager.hpp  simulator.cpp  simulator.hpp
core/src/utils/: csv.hpp  kf_utils.hpp  raii_file.hpp  styles.hpp  time_base.hpp  type_and_name.hpp  utils.hpp
